Change Notes
============

2010-05-17 FLI
	- Improved JDBCSerializerUtil performance of restoring dimension elements from the database
	
2010-05-14 FLI
	- Added possibility to seal a dimension to prevent changes. This will unfortunately cause an incompatibility
	  to older serialized datapools. 
	  
2010-05-11 FLI
	- Fixed a problem in the Flex cube cache in combination with mutable keys
	
2010-03-08 jbornema
	- DataPool: createDimension(String key) and createMeasure(String key) return types changed to interface. 

2010-02-23 kstein (commited by FLI)
	- Added the possibility to create temporary (softReferenced) cubes.

2010-02-08 kstein (commited by FLI)
	- Added ICubeCacheControl.buildCacheFromCube(ICube)

2009-11-17 jbornema
	- IKeyProvider implements required Serialized interface
	- FileDataPoolStorageProvider saved the data pool still in zip format even if the deserialization of zip failed (due to corrupt file or so) 

2009-11-12 jbornema
	- ICellProvider and IKeyProvider added to support customer Key and Cell extensions
	- Refactored usage of Cell to ICell
	- IDimensionElement.getTitlePath() added
	- Cell holds now an array of double and not Double obejcts anymore. This optimizes
	  overall memory allocation. Null values are stored as Double.NaN
	- CellExt and CellExtProvider added that supports userObject
	- Cube, CubeFlexCalc and CubePreCache increased version that supports new key and cell providers

2009-11-06 FLI
	- Added sortElements to IDimensionElement interface.

2009-10-07 jbornema
	- ICube: added allowSplash methods, added getCubeType
	- IDataPool.CubeType.PRE_CACHE added (implemented in CubePreCache)
	- IDimensionResolver added to implement changing IDimensionElements during aggregation
	- Key(Key) constuctor added - minor changes
	- KeyExt added that extends Key and provides a UserObject
	- Cube.createNewKey(IDimensionElement[]) added (for customer extension to a cube implementation)