@@ -1,6 +1,9 @@
 Change Notes
 ============
 
+2010-06-29 FLI
+	- Added possibility to set dimension behaviors, i.e. NO_SPLASH, NO_AGGREAGATION or FLAT
+
 2010-05-17 FLI
 	- Improved JDBCSerializerUtil performance of restoring dimension elements from the database
 	
